--- a/Resume.html
+++ b/Resume.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Resume Form</title>
 </head>
 
@@ -17,23 +16,28 @@
         <form action="#" method="post" enctype="multipart/form-data">
 
             <label>Full Name:<br>
-                <input type="text" name="fullName" required style="width: 100%; padding: 8px;">
+                <input type="text" name="fullName" required
+                    style="width: 100%; padding: 10px; border: 2px solid #00acc1; border-radius: 8px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
             </label><br><br>
 
             <label>Email Address:<br>
-                <input type="email" name="email" required style="width: 100%; padding: 8px;">
+                <input type="email" name="email" required
+                    style="width: 100%; padding: 10px; border: 2px solid #00acc1; border-radius: 8px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
             </label><br><br>
 
             <label>Phone Number:<br>
-                <input type="tel" name="phone" required style="width: 100%; padding: 8px;">
+                <input type="tel" name="phone" required
+                    style="width: 100%; padding: 10px; border: 2px solid #00acc1; border-radius: 8px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
             </label><br><br>
 
             <label>Date of Birth:<br>
-                <input type="date" name="dob" required style="width: 100%; padding: 8px;">
+                <input type="date" name="dob" required
+                    style="width: 100%; padding: 10px; border: 2px solid #00acc1; border-radius: 8px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
             </label><br><br>
 
             <label>Gender:<br>
-                <select name="gender" required style="width: 100%; padding: 8px;">
+                <select name="gender" required
+                    style="width: 100%; padding: 10px; border: 2px solid #00acc1; border-radius: 8px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
                     <option value="">Select</option>
                     <option>Male</option>
                     <option>Female</option>
@@ -42,53 +46,63 @@
             </label><br><br>
 
             <label>Nationality:<br>
-                <input type="text" name="nationality" required style="width: 100%; padding: 8px;">
+                <input type="text" name="nationality" required
+                    style="width: 100%; padding: 10px; border: 2px solid #00acc1; border-radius: 8px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
             </label><br><br>
 
             <label>Address:<br>
-                <textarea name="address" rows="2" required style="width: 100%; padding: 8px;"></textarea>
+                <textarea name="address" rows="2" required
+                    style="width: 100%; padding: 10px; border: 2px solid #00acc1; border-radius: 8px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);"></textarea>
             </label><br><br>
 
             <label>LinkedIn Profile URL:<br>
-                <input type="url" name="linkedin" style="width: 100%; padding: 8px;">
+                <input type="url" name="linkedin"
+                    style="width: 100%; padding: 10px; border: 2px solid #00acc1; border-radius: 8px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
             </label><br><br>
 
             <label>GitHub Profile URL:<br>
-                <input type="url" name="github" style="width: 100%; padding: 8px;">
+                <input type="url" name="github"
+                    style="width: 100%; padding: 10px; border: 2px solid #00acc1; border-radius: 8px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
             </label><br><br>
 
             <label>Upload Profile Photo:<br>
-                <input type="file" name="profilePhoto" accept="image/*" style="width: 100%;">
+                <input type="file" name="profilePhoto" accept="image/*"
+                    style="width: 100%; padding: 10px; border: 2px solid #00acc1; border-radius: 8px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
             </label><br><br>
 
             <label>Upload Resume (PDF only):<br>
-                <input type="file" name="resume" accept="application/pdf" required style="width: 100%;">
+                <input type="file" name="resume" accept="application/pdf" required
+                    style="width: 100%; padding: 10px; border: 2px solid #00acc1; border-radius: 8px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
             </label><br><br>
 
             <label>Highest Qualification:<br>
-                <input type="text" name="qualification" required style="width: 100%; padding: 8px;">
+                <input type="text" name="qualification" required
+                    style="width: 100%; padding: 10px; border: 2px solid #00acc1; border-radius: 8px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
             </label><br><br>
 
             <label>College / University Name:<br>
-                <input type="text" name="college" required style="width: 100%; padding: 8px;">
+                <input type="text" name="college" required
+                    style="width: 100%; padding: 10px; border: 2px solid #00acc1; border-radius: 8px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
             </label><br><br>
 
             <label>Year of Graduation:<br>
                 <input type="number" name="graduationYear" min="1900" max="2099" required
-                    style="width: 100%; padding: 8px;">
+                    style="width: 100%; padding: 10px; border: 2px solid #00acc1; border-radius: 8px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
             </label><br><br>
 
             <label>Technical Skills:<br>
                 <input type="text" name="skills" placeholder="HTML, CSS, JavaScript" required
-                    style="width: 100%; padding: 8px;">
+                    style="width: 100%; padding: 10px; border: 2px solid #00acc1; border-radius: 8px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
             </label><br><br>
 
             <label>Languages Known:<br>
-                <input type="text" name="languagesKnown" style="width: 100%; padding: 8px;">
+                <input type="text" name="languagesKnown"
+                    style="width: 100%; padding: 10px; border: 2px solid #00acc1; border-radius: 8px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
             </label><br><br>
 
             <label>Hobbies:<br>
-                <input type="text" name="hobbies" style="width: 100%; padding: 8px;">
+                <input type="text" name="hobbies"
+                    style="width: 100%; padding: 10px; border: 2px solid #00acc1; border-radius: 8px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);">
             </label><br><br>
 
             <label>
@@ -98,7 +112,9 @@
 
             <div style="text-align: center;">
                 <button type="submit"
-                    style="padding: 10px 20px; background-color: #4285f4; color: white; border: none; border-radius: 4px; font-size: 16px;">Submit</button>
+                    style="padding: 10px 25px; background-color: #2196f3; color: white; border: none; border-radius: 6px; font-size: 16px;">Submit</button>
+                <button type="reset"
+                    style="padding: 10px 25px; background-color: #9e9e9e; color: white; border: none; border-radius: 6px; font-size: 16px; margin-left: 10px;">Reset</button>
             </div>
 
         </form>
